--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,8 @@
 S3method(plot,sensemade)
 S3method(sensemakr,lm)
 export(contourplot)
+export(getbiasR2)
+export(getseR2)
+export(gettR2)
 export(sensemakr)
 export(worstcaseplot)
