removing hello realocating tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,17 @@ export(gettR2)
 export(interpret)
 export(sensemakr)
 export(worstcaseplot)
+importFrom(graphics,abline)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
+importFrom(graphics,plot)
+importFrom(graphics,points)
+importFrom(graphics,rug)
+importFrom(graphics,text)
+importFrom(stats,coef)
+importFrom(stats,df.residual)
+importFrom(stats,formula)
+importFrom(stats,model.matrix)
+importFrom(stats,sd)
+importFrom(stats,update)
+importFrom(stats,vcov)
