use 'get_bias()' instead of 'getbiasR2()'
man for
class_df_from_term
groupR2
group_list param in sensemakr()

formal test for
test-group-sensemakr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,12 @@ S3method(print,sensemade)
 S3method(print,summary.sensemade)
 S3method(sensemakr,lm)
 S3method(summary,sensemade)
+export(class_df_from_term)
 export(contourplot)
 export(get_bias)
 export(get_se)
 export(get_t)
+export(groupR2)
 export(interpret)
 export(sensemakr)
 export(worstcaseplot)
