--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(get_t)
 export(groupR2)
 export(interpret)
 export(sensemakr)
+export(worstcaseinterpret)
 export(worstcaseplot)
 importFrom(graphics,abline)
 importFrom(graphics,legend)
