--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,4 +12,7 @@ LazyData: true
 RoxygenNote: 6.0.1
 Suggests:
     testthat,
-    covr
+    covr,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
