--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,5 +25,6 @@ importFrom(stats,df.residual)
 importFrom(stats,formula)
 importFrom(stats,model.matrix)
 importFrom(stats,sd)
+importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(stats,vcov)
