--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,9 +20,11 @@ importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,rug)
 importFrom(graphics,text)
+importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,df.residual)
 importFrom(stats,formula)
+importFrom(stats,getCall)
 importFrom(stats,model.matrix)
 importFrom(stats,sd)
 importFrom(stats,terms)
