--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: sensemakr
 Type: Package
-Title: What the Package Does (Title Case)
+Title: The 'sensemakr' Package for R Helps You Makesense of Confounding
 Version: 0.1.0
-Author: Who wrote it
+Author: Chad Hazlett, Carlos Cinelli, Michael Tzen
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: This package makes use of a custom 'sensemakr' class that enables plot and print methods to make sense of unobserved confounding.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -16,3 +15,4 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
+Depends: R (>= 2.10)
