--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,sensemakr)
 S3method(print,summary.sensemakr)
 S3method(sensemakr,lm)
 S3method(summary,sensemakr)
+export(class_df_from_term)
 export(interpret)
 export(sensemakr)
 export(worstcaseinterpret)
