--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,11 @@ S3method(print,summary.sensemakr)
 S3method(sensemakr,lm)
 S3method(summary,sensemakr)
 export(class_df_from_term)
+export(contourplot)
 export(interpret)
 export(sensemakr)
 export(worstcaseinterpret)
+export(worstcaseplot)
 importFrom(graphics,abline)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
