--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Suggests:
     testthat,
     covr,
     knitr,
-    rmarkdown
+    rmarkdown,
     maptools
 VignetteBuilder: knitr
 Depends: R (>= 2.10)
