Adding robustness value functionality: computed by main function so available in output; added as output in summary method, and with natural language interpretation. Still need to pass through "q" so it's reported as well.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(sensemakr,lm)
 S3method(summary,sensemakr)
 export(class_df_from_term)
 export(contourplot)
+export(get_RV)
 export(interpret)
 export(sensemakr)
 export(worstcaseinterpret)
