--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
-
-language: R
-sudo: false
+language: r
+r:
+  - oldrel
+  - release
+  - devel
 cache: packages
+sudo: false
