--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(contour_plot,default)
 S3method(contour_plot,sensemakr)
 S3method(extreme_plot,default)
 S3method(extreme_plot,sensemakr)
+S3method(make_table,default)
+S3method(make_table,sensemakr)
 S3method(ovb_plot,default)
 S3method(ovb_plot,sensemakr)
 S3method(plot,sensemakr)
@@ -15,6 +17,7 @@ S3method(remove_benchmarks,sensemakr)
 export(add_benchmark)
 export(contour_plot)
 export(extreme_plot)
+export(make_table)
 export(ovb_plot)
 export(remove_benchmarks)
 export(robustness_value)
