revamp stats functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,17 +10,27 @@ S3method(make_table,default)
 S3method(make_table,sensemakr)
 S3method(ovb_plot,default)
 S3method(ovb_plot,sensemakr)
+S3method(partial_f2,lm)
+S3method(partial_f2,numeric)
+S3method(partial_r2,lm)
+S3method(partial_r2,numeric)
 S3method(plot,sensemakr)
 S3method(print,sensemakr)
 S3method(remove_benchmarks,default)
 S3method(remove_benchmarks,sensemakr)
+S3method(robustness_value,lm)
+S3method(robustness_value,numeric)
 export(add_benchmark)
 export(contour_plot)
 export(extreme_plot)
 export(make_table)
 export(ovb_plot)
+export(partial_f)
+export(partial_f2)
+export(partial_r2)
 export(remove_benchmarks)
 export(robustness_value)
+export(rv)
 export(sensemakr)
 importFrom(graphics,abline)
 importFrom(graphics,contour)
