new bottom up structure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,16 @@
 
 S3method(add_benchmark,default)
 S3method(add_benchmark,sensemakr)
-S3method(contour_plot,default)
-S3method(contour_plot,sensemakr)
-S3method(extreme_plot,default)
-S3method(extreme_plot,sensemakr)
 S3method(make_table,default)
 S3method(make_table,sensemakr)
+S3method(ovb_contour_plot,formula)
+S3method(ovb_contour_plot,lm)
+S3method(ovb_contour_plot,numeric)
+S3method(ovb_contour_plot,sensemakr)
+S3method(ovb_extreme_plot,formula)
+S3method(ovb_extreme_plot,lm)
+S3method(ovb_extreme_plot,numeric)
+S3method(ovb_extreme_plot,sensemakr)
 S3method(ovb_plot,default)
 S3method(ovb_plot,sensemakr)
 S3method(partial_f2,lm)
@@ -21,9 +25,13 @@ S3method(remove_benchmarks,sensemakr)
 S3method(robustness_value,lm)
 S3method(robustness_value,numeric)
 export(add_benchmark)
-export(contour_plot)
-export(extreme_plot)
+export(adjusted_estimate)
+export(adjusted_se)
+export(adjusted_t)
+export(bias)
 export(make_table)
+export(ovb_contour_plot)
+export(ovb_extreme_plot)
 export(ovb_plot)
 export(partial_f)
 export(partial_f2)
