improved rv printing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,6 @@ S3method(ovb_extreme_plot,formula)
 S3method(ovb_extreme_plot,lm)
 S3method(ovb_extreme_plot,numeric)
 S3method(ovb_extreme_plot,sensemakr)
-S3method(ovb_plot,default)
-S3method(ovb_plot,sensemakr)
 S3method(partial_f2,lm)
 S3method(partial_f2,numeric)
 S3method(partial_r2,lm)
@@ -32,7 +30,7 @@ export(bias)
 export(make_table)
 export(ovb_contour_plot)
 export(ovb_extreme_plot)
-export(ovb_plot)
+export(ovb_table)
 export(partial_f)
 export(partial_f2)
 export(partial_r2)
