removing documentation for now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,14 +10,13 @@ S3method(bias,lm)
 S3method(bias,numeric)
 S3method(group_partial_r2,lm)
 S3method(group_partial_r2,numeric)
+S3method(ovb_bounds,lm)
 S3method(ovb_contour_plot,formula)
 S3method(ovb_contour_plot,lm)
 S3method(ovb_contour_plot,numeric)
-S3method(ovb_contour_plot,sensemakr)
 S3method(ovb_extreme_plot,formula)
 S3method(ovb_extreme_plot,lm)
 S3method(ovb_extreme_plot,numeric)
-S3method(ovb_extreme_plot,sensemakr)
 S3method(partial_f2,lm)
 S3method(partial_f2,numeric)
 S3method(partial_r2,lm)
@@ -34,12 +33,11 @@ export(group_partial_r2)
 export(ovb_bounds)
 export(ovb_contour_plot)
 export(ovb_extreme_plot)
-export(ovb_table)
 export(partial_f)
 export(partial_f2)
 export(partial_r2)
 export(robustness_value)
-export(rv)
+export(sensitivity_stats)
 importFrom(graphics,abline)
 importFrom(graphics,contour)
 importFrom(graphics,legend)
@@ -49,4 +47,7 @@ importFrom(graphics,points)
 importFrom(graphics,rug)
 importFrom(graphics,text)
 importFrom(stats,coef)
+importFrom(stats,df.residual)
 importFrom(stats,qt)
+importFrom(stats,update)
+importFrom(stats,vcov)
