--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,8 @@ Package: sensemakr
 Type: Package
 Title: sensemakr
 Version: 0.1.0
-Authors@R: c(person("Carlos", "Cinelli", email = "carloscinelli@ucla.edu", role = c("aut")),
-             person("Chad", "Hazlett", email = "chazlett@ucla.edu", role = c("aut")),
-             person("Aaron", "Rudkin", email = "rudkin@ucla.edu", role = c("aut")))
+Author: Carlos Cinelli <carloscinelli@hotmail.com>, Chad Hazlett <chazlett@ucla.edu>, Aaron Rudkin <rudkin@ucla.edu>
+Maintainer: Carlos Cinelli <carloscinelli@hotmail.com>
 Description: TO BE WRITTEN.
 URL: https://github.com/chadhazlett/sensemakr
 BugReports: https://github.com/chadhazlett/sensemakr/issues
