--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,5 +62,6 @@ importFrom(stats,coef)
 importFrom(stats,df.residual)
 importFrom(stats,formula)
 importFrom(stats,qt)
+importFrom(stats,setNames)
 importFrom(stats,update)
 importFrom(stats,vcov)
