print and summary

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ S3method(sensemakr,formula)
 S3method(sensemakr,lm)
 S3method(sensitivity_stats,lm)
 S3method(sensitivity_stats,numeric)
+S3method(summary,sensemakr)
 export(add_bound_to_contour)
 export(adjusted_estimate)
 export(adjusted_se)
