--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,13 +4,13 @@ Title: sensemakr
 Version: 0.1.0
 Author: Carlos Cinelli <carloscinelli@hotmail.com>, Chad Hazlett <chazlett@ucla.edu>, Aaron Rudkin <rudkin@ucla.edu>
 Maintainer: Carlos Cinelli <carloscinelli@hotmail.com>
-Description: TO BE WRITTEN.
+Description: The sensemakr package implements a suite of sensitivity analysis tools that extends the traditional omitted variable bias framework and makes it easier to understand the impact of omitted variables in linear regression models, as discussed in Cinelli and Hazlett (2018).
 URL: https://github.com/chadhazlett/sensemakr
 BugReports: https://github.com/chadhazlett/sensemakr/issues
 License: GPL-3
 Depends: R (>= 3.1.0)
 Encoding: UTF-8
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
 Suggests:
     testthat
 LazyData: true
