--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ S3method(robustness_value,lm)
 S3method(robustness_value,numeric)
 S3method(sensemakr,formula)
 S3method(sensemakr,lm)
+S3method(sensemakr,numeric)
 S3method(sensitivity_stats,lm)
 S3method(sensitivity_stats,numeric)
 S3method(summary,sensemakr)
