adding covr/codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,12 @@ r:
   - oldrel
   - release
   - devel
+
+r_packages:
+  - covr
+
+after_success:
+  - Rscript -e 'library(covr); codecov()'
+
 cache: packages
 sudo: false
