--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ importFrom(graphics,abline)
 importFrom(graphics,contour)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
+importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,rug)
