--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,10 @@ Author: Carlos Cinelli [aut, cre],
   Chad Hazlett [aut],
   Aaron Rudkin [ctb]
 Maintainer: Carlos Cinelli <carloscinelli@hotmail.com>
-Description: The sensemakr package implements a suite of sensitivity analysis tools 
+Description:  Implements a suite of sensitivity analysis tools 
   that extends the traditional omitted variable bias framework and makes it easier 
-  to understand the impact of omitted variables in OLS models, as discussed in Cinelli and Hazlett (2018).
+  to understand the impact of omitted variables in regression models, as discussed in Cinelli and Hazlett (2018) 
+  <https://www.researchgate.net/publication/322509816_Making_Sense_of_Sensitivity_Extending_Omitted_Variable_Bias>.
 URL: https://github.com/chadhazlett/sensemakr
 BugReports: https://github.com/chadhazlett/sensemakr/issues
 License: GPL-3
