--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-# DO NOT CHANGE the "init" and "install" sections below
+ DO NOT CHANGE the "init" and "install" sections below
 
 # Download script file from GitHub
 init:
@@ -6,14 +6,29 @@ init:
         $ErrorActionPreference = "Stop"
         Invoke-WebRequest http://raw.github.com/krlmlr/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
         Import-Module '..\appveyor-tool.ps1'
-
 install:
   ps: Bootstrap
 
-cache:
-  - C:\RLibrary
-
 # Adapt as necessary starting from here
+
+environment:
+  global:
+    WARNINGS_ARE_ERRORS: 1
+
+  matrix:
+  - R_VERSION: devel
+    GCC_PATH: mingw_32
+
+  - R_VERSION: devel
+    R_ARCH: x64
+    GCC_PATH: mingw_64
+
+  - R_VERSION: release
+    R_ARCH: x64
+
+  - R_VERSION: stable
+
+  - R_VERSION: oldrel
 
 build_script:
   - travis-tool.sh install_deps
