--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Author: Carlos Cinelli [aut, cre],
   Chad Hazlett [aut],
   Aaron Rudkin [ctb]
 Maintainer: Carlos Cinelli <carloscinelli@hotmail.com>
-Description:  Implements a suite of sensitivity analysis tools 
+Description: Implements a suite of sensitivity analysis tools 
   that extends the traditional omitted variable bias framework and makes it easier 
   to understand the impact of omitted variables in regression models, as discussed in Cinelli and Hazlett (2018) 
   <https://www.researchgate.net/publication/322509816_Making_Sense_of_Sensitivity_Extending_Omitted_Variable_Bias>.
@@ -22,5 +22,10 @@ License: GPL-3
 Depends: R (>= 3.1.0)
 Encoding: UTF-8
 RoxygenNote: 6.1.1
-Suggests: testthat, covr
+Suggests: 
+    testthat,
+    covr,
+    knitr,
+    rmarkdown
 LazyData: true
+VignetteBuilder: knitr
