New functions - bias factor - relative bias

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ S3method(add_bound_to_contour,numeric)
 S3method(add_bound_to_contour,ovb_bounds)
 S3method(adjusted_estimate,lm)
 S3method(adjusted_estimate,numeric)
+S3method(adjusted_partial_r2,lm)
+S3method(adjusted_partial_r2,numeric)
 S3method(adjusted_se,lm)
 S3method(adjusted_se,numeric)
 S3method(adjusted_t,lm)
@@ -13,6 +15,7 @@ S3method(bias,lm)
 S3method(bias,numeric)
 S3method(group_partial_r2,lm)
 S3method(group_partial_r2,numeric)
+S3method(model_helper,lm)
 S3method(ovb_bounds,lm)
 S3method(ovb_contour_plot,formula)
 S3method(ovb_contour_plot,lm)
@@ -29,6 +32,8 @@ S3method(partial_r2,numeric)
 S3method(plot,sensemakr)
 S3method(print,rv)
 S3method(print,sensemakr)
+S3method(relative_bias,lm)
+S3method(relative_bias,numeric)
 S3method(robustness_value,lm)
 S3method(robustness_value,numeric)
 S3method(sensemakr,formula)
@@ -39,10 +44,13 @@ S3method(sensitivity_stats,numeric)
 S3method(summary,sensemakr)
 export(add_bound_to_contour)
 export(adjusted_estimate)
+export(adjusted_partial_r2)
 export(adjusted_se)
 export(adjusted_t)
 export(bias)
+export(bias_factor)
 export(group_partial_r2)
+export(model_helper)
 export(ovb_bounds)
 export(ovb_contour_plot)
 export(ovb_extreme_plot)
@@ -50,6 +58,8 @@ export(ovb_minimal_reporting)
 export(partial_f)
 export(partial_f2)
 export(partial_r2)
+export(rel_bias)
+export(relative_bias)
 export(robustness_value)
 export(sensemakr)
 export(sensitivity_stats)
