--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
 pandoc: 2.3.1
-pkgdown: 1.4.1.9000
-pkgdown_sha: 48e12e0fc836ec8ca423b44656b97f719cd856c7
+pkgdown: 1.4.1
+pkgdown_sha: ~
 articles:
   informal_benchmarking: informal_benchmarking.html
   sensemakr: sensemakr.html
