--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(add_bound_to_contour,lm)
 S3method(add_bound_to_contour,numeric)
 S3method(add_bound_to_contour,ovb_bounds)
+S3method(add_bound_to_contour,ovb_partial_r2_bound)
 S3method(adjusted_estimate,lm)
 S3method(adjusted_estimate,numeric)
 S3method(adjusted_partial_r2,lm)
@@ -25,6 +26,7 @@ S3method(ovb_extreme_plot,formula)
 S3method(ovb_extreme_plot,lm)
 S3method(ovb_extreme_plot,numeric)
 S3method(ovb_extreme_plot,sensemakr)
+S3method(ovb_partial_r2_bound,numeric)
 S3method(partial_f2,lm)
 S3method(partial_f2,numeric)
 S3method(partial_r2,lm)
@@ -54,6 +56,7 @@ export(ovb_bounds)
 export(ovb_contour_plot)
 export(ovb_extreme_plot)
 export(ovb_minimal_reporting)
+export(ovb_partial_r2_bound)
 export(partial_f)
 export(partial_f2)
 export(partial_r2)
