- new group benchmarks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(partial_f2)
 export(partial_r2)
 export(rel_bias)
 export(relative_bias)
+export(resid_maker)
 export(robustness_value)
 export(sensemakr)
 export(sensitivity_stats)
