--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,7 +78,9 @@ importFrom(graphics,text)
 importFrom(stats,coef)
 importFrom(stats,df.residual)
 importFrom(stats,formula)
+importFrom(stats,lm)
 importFrom(stats,qt)
+importFrom(stats,resid)
 importFrom(stats,setNames)
 importFrom(stats,update)
 importFrom(stats,vcov)
