--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ S3method(partial_r2,numeric)
 S3method(plot,sensemakr)
 S3method(print,rv)
 S3method(print,sensemakr)
+S3method(print,t_stats)
 S3method(relative_bias,lm)
 S3method(relative_bias,numeric)
 S3method(robustness_value,lm)
