--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,6 +8,8 @@ template:
 authors:
   Carlos Cinelli:
     href: https://carloscinelli.com
+  Jeremy Ferwerda:
+    href: https://www.jeremyferwerda.com/
   Chad Hazlett:
     href: https://chadhazlett.com
   Aaron Rudkin:
