- factor treatments and benchmarks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(resid_maker)
 export(robustness_value)
 export(sensemakr)
 export(sensitivity_stats)
+import(stats)
 importFrom(graphics,abline)
 importFrom(graphics,contour)
 importFrom(graphics,legend)
