export ovb_partial_r2_bound.lm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ S3method(ovb_extreme_plot,formula)
 S3method(ovb_extreme_plot,lm)
 S3method(ovb_extreme_plot,numeric)
 S3method(ovb_extreme_plot,sensemakr)
+S3method(ovb_partial_r2_bound,lm)
 S3method(ovb_partial_r2_bound,numeric)
 S3method(partial_f2,lm)
 S3method(partial_f2,numeric)
