--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,8 @@
-pandoc: 2.7.3
-pkgdown: 1.4.1
+pandoc: 2.11.4
+pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   informal_benchmarking: informal_benchmarking.html
   sensemakr: sensemakr.html
+last_built: 2021-07-26T18:16Z
 
