include fixest method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,45 +4,62 @@ S3method(add_bound_to_contour,lm)
 S3method(add_bound_to_contour,numeric)
 S3method(add_bound_to_contour,ovb_bounds)
 S3method(add_bound_to_contour,ovb_partial_r2_bound)
+S3method(adjusted_estimate,fixest)
 S3method(adjusted_estimate,lm)
 S3method(adjusted_estimate,numeric)
+S3method(adjusted_partial_r2,fixest)
 S3method(adjusted_partial_r2,lm)
 S3method(adjusted_partial_r2,numeric)
+S3method(adjusted_se,fixest)
 S3method(adjusted_se,lm)
 S3method(adjusted_se,numeric)
+S3method(adjusted_t,fixest)
 S3method(adjusted_t,lm)
 S3method(adjusted_t,numeric)
+S3method(bias,fixest)
 S3method(bias,lm)
 S3method(bias,numeric)
+S3method(error_if_no_dof,fixest)
+S3method(error_if_no_dof,lm)
+S3method(group_partial_r2,fixest)
 S3method(group_partial_r2,lm)
 S3method(group_partial_r2,numeric)
+S3method(model_helper,fixest)
 S3method(model_helper,lm)
+S3method(ovb_bounds,fixest)
 S3method(ovb_bounds,lm)
-S3method(ovb_contour_plot,formula)
+S3method(ovb_contour_plot,formula_lm)
 S3method(ovb_contour_plot,lm)
 S3method(ovb_contour_plot,numeric)
 S3method(ovb_contour_plot,sensemakr)
-S3method(ovb_extreme_plot,formula)
+S3method(ovb_extreme_plot,formula_lm)
 S3method(ovb_extreme_plot,lm)
 S3method(ovb_extreme_plot,numeric)
 S3method(ovb_extreme_plot,sensemakr)
+S3method(ovb_partial_r2_bound,fixest)
 S3method(ovb_partial_r2_bound,lm)
 S3method(ovb_partial_r2_bound,numeric)
+S3method(partial_f2,fixest)
 S3method(partial_f2,lm)
 S3method(partial_f2,numeric)
+S3method(partial_r2,fixest)
 S3method(partial_r2,lm)
 S3method(partial_r2,numeric)
 S3method(plot,sensemakr)
 S3method(print,rv)
 S3method(print,sensemakr)
 S3method(print,t_stats)
+S3method(relative_bias,fixest)
 S3method(relative_bias,lm)
 S3method(relative_bias,numeric)
+S3method(robustness_value,fixest)
 S3method(robustness_value,lm)
 S3method(robustness_value,numeric)
-S3method(sensemakr,formula)
+S3method(sensemakr,fixest)
+S3method(sensemakr,formula_lm)
 S3method(sensemakr,lm)
 S3method(sensemakr,numeric)
+S3method(sensitivity_stats,fixest)
 S3method(sensitivity_stats,lm)
 S3method(sensitivity_stats,numeric)
 S3method(summary,sensemakr)
@@ -52,6 +69,7 @@ export(adjusted_partial_r2)
 export(adjusted_se)
 export(adjusted_t)
 export(bias)
+export(error_if_no_dof)
 export(group_partial_r2)
 export(model_helper)
 export(ovb_bounds)
