--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,7 +56,7 @@ S3method(robustness_value,fixest)
 S3method(robustness_value,lm)
 S3method(robustness_value,numeric)
 S3method(sensemakr,fixest)
-S3method(sensemakr,formula_lm)
+S3method(sensemakr,formula)
 S3method(sensemakr,lm)
 S3method(sensemakr,numeric)
 S3method(sensitivity_stats,fixest)
