--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ S3method(sensitivity_stats,lm)
 S3method(sensitivity_stats,numeric)
 S3method(summary,sensemakr)
 export(add_bound_to_contour)
+export(adjusted_critical_value)
 export(adjusted_estimate)
 export(adjusted_partial_r2)
 export(adjusted_se)
