--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,9 @@ S3method(adjusted_t,numeric)
 S3method(bias,fixest)
 S3method(bias,lm)
 S3method(bias,numeric)
+S3method(extreme_robustness_value,fixest)
+S3method(extreme_robustness_value,lm)
+S3method(extreme_robustness_value,numeric)
 S3method(group_partial_r2,fixest)
 S3method(group_partial_r2,lm)
 S3method(group_partial_r2,numeric)
@@ -53,6 +56,7 @@ S3method(print,t_stats)
 S3method(relative_bias,fixest)
 S3method(relative_bias,lm)
 S3method(relative_bias,numeric)
+S3method(robustness_value,default)
 S3method(robustness_value,fixest)
 S3method(robustness_value,lm)
 S3method(robustness_value,numeric)
@@ -72,6 +76,7 @@ export(adjusted_se)
 export(adjusted_t)
 export(bias)
 export(error_if_no_dof)
+export(extreme_robustness_value)
 export(group_partial_r2)
 export(model_helper)
 export(ovb_bounds)
