reverted to generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ S3method(add_bound_to_contour,lm)
 S3method(add_bound_to_contour,numeric)
 S3method(add_bound_to_contour,ovb_bounds)
 S3method(add_bound_to_contour,ovb_partial_r2_bound)
+S3method(adjusted_ci,fixest)
+S3method(adjusted_ci,lm)
+S3method(adjusted_ci,numeric)
 S3method(adjusted_estimate,fixest)
 S3method(adjusted_estimate,lm)
 S3method(adjusted_estimate,numeric)
@@ -69,6 +72,7 @@ S3method(sensitivity_stats,lm)
 S3method(sensitivity_stats,numeric)
 S3method(summary,sensemakr)
 export(add_bound_to_contour)
+export(adjusted_ci)
 export(adjusted_critical_value)
 export(adjusted_estimate)
 export(adjusted_partial_r2)
