-print -plot lims

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ S3method(adjusted_t,numeric)
 S3method(bias,fixest)
 S3method(bias,lm)
 S3method(bias,numeric)
+S3method(extreme_robustness_value,default)
 S3method(extreme_robustness_value,fixest)
 S3method(extreme_robustness_value,lm)
 S3method(extreme_robustness_value,numeric)
@@ -59,7 +60,6 @@ S3method(print,t_stats)
 S3method(relative_bias,fixest)
 S3method(relative_bias,lm)
 S3method(relative_bias,numeric)
-S3method(robustness_value,default)
 S3method(robustness_value,fixest)
 S3method(robustness_value,lm)
 S3method(robustness_value,numeric)
@@ -95,8 +95,10 @@ export(rel_bias)
 export(relative_bias)
 export(resid_maker)
 export(robustness_value)
+export(rv)
 export(sensemakr)
 export(sensitivity_stats)
+export(xrv)
 import(stats)
 importFrom(graphics,abline)
 importFrom(graphics,contour)
