--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,9 @@ S3method(ovb_extreme_plot,sensemakr)
 S3method(ovb_partial_r2_bound,fixest)
 S3method(ovb_partial_r2_bound,lm)
 S3method(ovb_partial_r2_bound,numeric)
+S3method(partial_f,fixest)
+S3method(partial_f,lm)
+S3method(partial_f,numeric)
 S3method(partial_f2,fixest)
 S3method(partial_f2,lm)
 S3method(partial_f2,numeric)
@@ -79,7 +82,6 @@ export(adjusted_partial_r2)
 export(adjusted_se)
 export(adjusted_t)
 export(bias)
-export(error_if_no_dof)
 export(extreme_robustness_value)
 export(group_partial_r2)
 export(model_helper)
