--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ S3method(partial_f,numeric)
 S3method(partial_f2,fixest)
 S3method(partial_f2,lm)
 S3method(partial_f2,numeric)
+S3method(partial_r2,default)
 S3method(partial_r2,fixest)
 S3method(partial_r2,lm)
 S3method(partial_r2,numeric)
@@ -63,6 +64,7 @@ S3method(print,t_stats)
 S3method(relative_bias,fixest)
 S3method(relative_bias,lm)
 S3method(relative_bias,numeric)
+S3method(robustness_value,default)
 S3method(robustness_value,fixest)
 S3method(robustness_value,lm)
 S3method(robustness_value,numeric)
