- change label for unadjusted

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ S3method(adjusted_t,numeric)
 S3method(bias,fixest)
 S3method(bias,lm)
 S3method(bias,numeric)
+S3method(error_if_no_dof,fixest)
+S3method(error_if_no_dof,lm)
 S3method(extreme_robustness_value,default)
 S3method(extreme_robustness_value,fixest)
 S3method(extreme_robustness_value,lm)
